# mcm

./: Cargo.toml  flake.nix
src/: lib.rs  main.rs  primitive.rs  set.rs
